[package]
name = "kagura"
version = "0.5.5"
authors = ["SoundRabbit <soundrabbitstd@gmail.com>"]
edition = "2018"
description = "Frontend frame-work for wasm on Rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/SoundRabbit/Kagura"
homepage = "https://soundrabbit.github.io/Kagura/"
readme = "./README.md"
keywords = ["web", "wasm", "front-end", "kagura"]
categories = ["gui", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "./src/lib.rs"

[dependencies]
rand = { version = "0.7.0", features = ["wasm-bindgen"] }
serde = "1.0.101"
serde_derive = "1.0.101"

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3.28"
features = [
    "Document",
    "Element",
    "EventTarget",
    "HtmlInputElement",
    "Node",
    "Text",
    "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.2"