[package]
name = "kagura"
version = "0.14.0"
authors = ["SoundRabbit <soundrabbitstd@gmail.com>"]
edition = "2021"
description = "Frontend frame-work for wasm on Rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/SoundRabbit/Kagura"
homepage = "https://soundrabbit.github.io/Kagura/"
readme = "./README.md"
keywords = ["web", "wasm", "front-end", "kagura"]
categories = ["gui", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "./src/lib.rs"

[features]

[dependencies]
async-std = "^1.10"
