[package]
name = "kagura"
version = "0.14.2"
authors = ["SoundRabbit <soundrabbitstd@gmail.com>"]
edition = "2021"
description = "component-oriented GUI framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SoundRabbit/Kagura"
readme = "./README.md"
keywords = ["web", "wasm", "front-end", "kagura"]
categories = ["gui", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "./src/lib.rs"

[features]

[dependencies]
async-std = "^1.10"
