[package]
name = "nusa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "^1.10"
js-sys = "^0.3"
wasm-bindgen = "^0.2"
wasm-bindgen-futures = "^0.4"

[dependencies.kagura]
path = "../kagura"
version = "^0.14"

[dependencies.web-sys]
version = "^0.3"
features = [
    "console",
    "CharacterData",
    "Document",
    "Event",
    "EventTarget",
    "Element",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "Node",
    "NodeList",
    "Text",
    "Window",
]
