[package]
name = "nusa"
version = "0.1.4"
authors = ["SoundRabbit <soundrabbitstd@gmail.com>"]
edition = "2021"
description = "web-frontend features for kagura"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SoundRabbit/Kagura"
readme = "./README.md"
keywords = ["web", "wasm", "front-end", "kagura"]
categories = ["gui", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "^1.10"
js-sys = "^0.3"
wasm-bindgen = "^0.2"
wasm-bindgen-futures = "^0.4"

[dependencies.kagura]
path = "../kagura"
version = "^0.14"

[dependencies.web-sys]
version = "^0.3"
features = [
    "console",
    "CharacterData",
    "Document",
    "Event",
    "EventTarget",
    "Element",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "Node",
    "NodeList",
    "Text",
    "Window",
]
