[package]
name = "osashimi"
version = "0.1.0"
authors = ["SoundRabbit <soundrabbitstd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
]