[package]
name = "hello-world"
version = "0.1.0"
authors = ["SoundRabbit <soundrabbitstd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

[dependencies.osashimi]
path = "../../osashimi"