[package]
name = "kagura-project"
version = "0.1.0"
edition="2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# with "isaribi", you can write style sheet like css-module or styled-component.
isaribi="^0.2"
js-sys="^0.3"
kagura="^0.13"
wasm-bindgen="^0.2"

[dependencies.web-sys]
version="^0.3"
features=[
# If you want to use HtmlCanvasElement, Blob, IdbDatabase and so on, 
# add features hear.
]
