[package]
name = "attribute"
version = "0.1.2"
authors = ["neunyan <soundrabbitstd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.kagura]
path = "../../kagura"
